# kch06tc

./: .gitmodules  CMakeLists.txt  LICENSE  README
kicad/: fp-lib-table  sym-lib-table  terrarium_control.kicad_pcb  terrarium_control.lib  terrarium_control.pro  terrarium_control.sch
kicad/terrarium_control.pretty/: DG128-5.0-02P.kicad_mod  DG128-5.0-03P.kicad_mod  FC-135.kicad_mod  NRP-10-C.kicad_mod  batt_holder.kicad_mod  github_qrcode.kicad_mod
scheme/: terrarium_control.kicad_pcb  terrarium_control.lib  terrarium_control.sch
scheme/terrarium_control.pretty/: DG128-5.0-02P.kicad_mod  DG128-5.0-03P.kicad_mod  NRP-10-C.kicad_mod
src/: config.h  defines.h  editor.c  editor.h  gpio.h  main.c  main.cpp  queue.c  queue.h  scheduler.c  scheduler.h  scheme.h  shell.c  shell.h  task.h  text.c  text.h  uart.c  uart.h  vt.c  vt.h
src/sh/: echo.c  echo.h  help.c  help.h  relay.c  relay.h
